Polish expression profiles code a bit
Nothing serious, only some javadocs, immutability and non-null-ness.